--- a/src/app/repo/repo.component.css
+++ b/src/app/repo/repo.component.css
@@ -1,13 +1,13 @@
 *{
     margin: 0%;
    
-    font-family: 'Courier New', cursive;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 nav{
     /*text-align: center; */
     font-size: 15px;
-    background-color: blue;
+    background-color: rgb(41, 33, 33);
     color: cornsilk;
 }
 .search{
@@ -22,14 +22,12 @@ nav{
     margin-top: 20px;
     width: 100%;
     padding: 8px 16px;
-    border-color: black;
-    box-shadow: 2px 2px 3px 4px black;
+    border-color: green;
     border-width: 2px;
 }
 .profile{
     margin-left: 13%;
-    border-color: cyan;
-    box-shadow: 9px 9px 9px 9px royalblue;
+    border-color: darkgreen;
 }
 li{
     opacity: o.8;
@@ -41,5 +39,5 @@ li{
     opacity: o.8;
     background-color: cornsilk;
     border-radius: 3%;
-    color: darkcyan;
+    color: darkblue;
 }
